--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    </section>
 
 <section>
-<h3> קצת על עצמי</h3>
+<h3>(למדתי HTML) קצת על עצמי</h3>
 <p>
  אני גר ביישוב שקוראים לו שערי  תקווה
 ש לי 3 אחים בסך הכל,2 בנות ואח אחד  
