הוספתי עמוד לליהה

--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 <body>
    <h1>maor 2 </h1>
    
-<ul>אני חולה על שווארמהההההההה מאודדדדדדדדדדדדדדדדדד</ul>
+<ul>אני חולה על שווארמהההההההה מאודדדדדדדczcדדדדדדדדדדד</ul>
 
 
 </body>
