--- a/Lia.html
+++ b/Lia.html
@@ -64,7 +64,7 @@
         <a href="https://www.google.com/imgres?q=%D7%A4%D7%A8%D7%97%D7%99%D7%9D&imgurl=https%3A%2F%2Fhrflowers.co.il%2Fwp-content%2Fuploads%2F2022%2F04%2F34653175_l_enrich-%25D7%25A2%25D7%2595%25D7%25AA%25D7%25A7.png&imgrefurl=https%3A%2F%2Fhrflowers.co.il%2Fproduct%2F%25D7%2596%25D7%25A8-%25D7%25A4%25D7%25A8%25D7%2597%25D7%2599%25D7%259D-%25D7%25A6%25D7%2591%25D7%25A2%25D7%2595%25D7%25A0%25D7%2599%2F&docid=MivA3ZMEd7MXQM&tbnid=JZzwYeMAu76MQM&vet=12ahUKEwioy_CjuI6HAxX27AIHHQIODiwQM3oECBYQAA..i&w=1600&h=1581&hcb=2&ved=2ahUKEwioy_CjuI6HAxX27AIHHQIODiwQM3oECBYQAA"
         <button class="my-button button-below">הגיע ההזמן שליייי</button>
         </a>
-        <a href="http://127.0.0.1:5500/lia2.html"
+        <a href="/lia2.html"
         <button class="my-button button-below">אני האחרוןןןן!!!</button>
         </a>
 
